objects/SurveyLabelConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>TE IND NPS Landing Page Details</description>
    <fields>
        <fullName>CN_SIMPL_Value_c__c</fullName>
        <label>CN_SIMPL_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Value_c__c</fullName>
        <label>CN_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Value_c__c</fullName>
        <label>DE_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EN_Value_c__c</fullName>
        <label>EN_Value__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ES_Value_c__c</fullName>
        <label>ES_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Value_c__c</fullName>
        <label>FR_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Value_c__c</fullName>
        <label>IT_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JP_Value_c__c</fullName>
        <label>JP_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KR_Value_c__c</fullName>
        <label>KR_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Value_c__c</fullName>
        <label>PT_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RU_Value_c__c</fullName>
        <label>RU_Value__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SurveyLabelConfig</label>
</CustomObject>